--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,6 +41,12 @@ jobs:
         pip install -r requirements.txt
         pip install pytest pytest-cov httpx
 
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        flake8 app tests
+
+
     - name: Run tests with coverage
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
